src/components/Navbar/Navbar.css
.container {
  padding: 15px 15px;
  flex-shrink: 0;
}

.logo {
  border-radius: 50%;
  margin-left: 60px;
}

.navbar {
  height: 71px;
}

.nav-link {
  text-decoration: none;
  color: #1e1e1e;
  margin-right: 3rem;
  line-height: 1.6;
}

.nav-link-home {
  text-decoration: none;
  color: #8bc34a;
  margin-right: 3rem;
}

.nav-link:hover {
  color: #8bc34a;
}

.log-in-button {
  text-decoration: none;
  color: #1e1e1e;
}

.log-in-button:hover {
  color: #8bc34a;
}

.sign-up-button {
  background-color: #8bc34a;
  color: #1e1e1e;
  padding: 15px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  text-decoration: none;
}

